--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ name          = "mio"
 # - Update CHANGELOG.md.
 # - Update doc URL.
 # - Create git tag
-version       = "0.6.17"
+version       = "0.6.18"
 license       = "MIT"
 authors       = ["Carl Lerche <me@carllerche.com>"]
 description   = "Lightweight non-blocking IO"
@@ -40,15 +40,17 @@ fuchsia-zircon-sys = "0.3.2"
 libc   = "0.2.42"
 
 [target.'cfg(windows)'.dependencies]
-winapi = "0.2.6"
-miow   = "0.2.1"
-kernel32-sys = "0.2"
+winapi = { version = "0.3", features = ["std", "ioapiset", "winbase", "winerror"]}
+miow   = "0.3"
 
 [dev-dependencies]
 env_logger = { version = "0.4.0", default-features = false }
 tempdir    = "0.3.4"
-bytes      = "0.3.0"
+bytes      = "0.4.0"
 
 [[test]]
 name = "test"
 path = "test/mod.rs"
+
+[patch.crates-io]
+iovec = { git = "https://github.com/Eijebong/iovec.git", branch="servo" }
